--- a/css/mirador.css
+++ b/css/mirador.css
@@ -1616,3 +1616,80 @@ div.manifest-info a.mirador-btn.mirador-icon-toc {
     height: 75px !important;
 }
 
+/* NLW Book of Peace
+---------------------------------------------------------------------------- */
+span.rank { 
+	color: red;
+	font-weight: bold;
+}
+/*
+span.rank:before {
+    color: red;
+	content: '<rank>';
+}
+
+span.rank:after { 
+    color: red;
+	content: '</rank>';
+}
+*/
+span.name { 
+	color: black;
+	font-weight: bold;
+}
+/*
+span.name:before {
+    color: black;
+	content: '<name>';
+}
+
+span.name:after { 
+    color: black;
+	content: '</name>';
+}
+*/
+span.ship {
+	color: green;
+	font-weight: bold;
+}
+/*
+span.ship:before {
+    color: green;
+	content: '<ship>';
+}
+
+span.ship:after { 
+    color: green;
+	content: '</ship>';
+}
+*/
+span.place {
+	color: blue;
+	font-weight: bold;
+}
+/*
+span.place:before {
+    color: blue;
+	content: '<place>';
+}
+
+span.place:after { 
+    color: blue;
+	content: '</place>';
+}
+*/
+span.service {
+	color: brown;
+	font-weight: bold;
+}
+/*
+span.service:before {
+    color: brown;
+	content: '<service>';
+}
+
+span.service:after { 
+    color: brown;
+	content: '</service>';
+}
+*/
