--- a/css/mirador.css
+++ b/css/mirador.css
@@ -1634,7 +1634,7 @@ span.rank:after {
 }
 */
 span.name {
-	color: black;
+	color: darkorange;
 	font-weight: bold;
 }
 /*
@@ -1694,6 +1694,14 @@ span.service:after {
 }
 */
 span.heading {
-	color: red;
+	color: aqua;
+	font-weight: bold;
+}
+span.bat {
+	color: cadetblue;
+	font-weight: bold;
+}
+span.medal {
+	color: darkgreen;
 	font-weight: bold;
 }
