--- a/css/mirador.css
+++ b/css/mirador.css
@@ -1616,92 +1616,37 @@ div.manifest-info a.mirador-btn.mirador-icon-toc {
     height: 75px !important;
 }
 
-/* NLW Book of Peace
+/* NLW Book of Peace - These styles are used to style the annotations when
+   you hover over a blue box. Styles when in editing mode for tinymce are in bor.css
+   Probably should be moved to its own css file and included in the grunt build
 ---------------------------------------------------------------------------- */
+span.heading {
+	color: cadetblue;
+	font-weight: bold;
+}
 span.rank {
 	color: red;
 	font-weight: bold;
 }
-/*
-span.rank:before {
-    color: red;
-	content: '<rank>';
-}
 
-span.rank:after {
-    color: red;
-	content: '</rank>';
-}
-*/
 span.name {
-	color: darkorange;
+	color: black;
 	font-weight: bold;
 }
-/*
-span.name:before {
-    color: black;
-	content: '<name>';
-}
-
-span.name:after {
-    color: black;
-	content: '</name>';
-}
-*/
-span.ship {
-	color: green;
-	font-weight: bold;
-}
-/*
-span.ship:before {
-    color: green;
-	content: '<ship>';
-}
-
-span.ship:after {
-    color: green;
-	content: '</ship>';
-}
-*/
 span.place {
-	color: blue;
-	font-weight: bold;
-}
-/*
-span.place:before {
-    color: blue;
-	content: '<place>';
-}
-
-span.place:after {
-    color: blue;
-	content: '</place>';
-}
-*/
-span.service {
 	color: brown;
 	font-weight: bold;
 }
-/*
-span.service:before {
-    color: brown;
-	content: '<service>';
-}
-
-span.service:after {
-    color: brown;
-	content: '</service>';
-}
-*/
-span.heading {
-	color: aqua;
+span.unit {
+	color: darkorange;
 	font-weight: bold;
 }
-span.bat {
-	color: cadetblue;
+
+span.ship {
+	color: blue;
 	font-weight: bold;
 }
 span.medal {
-	color: darkgreen;
+	color: goldenrod;
 	font-weight: bold;
 }
